// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given params 1`] = `
{
  "data": [
    10,
    5,
    116,
    111,
    107,
    101,
    110,
    18,
    8,
    116,
    114,
    97,
    110,
    115,
    102,
    101,
    114,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransaction should return signed transaction for given params schema 1`] = `
{
  "command": "transfer",
  "fee": 10000000n,
  "id": {
    "data": [
      116,
      46,
      150,
      191,
      33,
      194,
      39,
      112,
      217,
      155,
      56,
      117,
      80,
      106,
      39,
      5,
      1,
      40,
      202,
      104,
      219,
      176,
      87,
      237,
      119,
      231,
      133,
      67,
      232,
      26,
      239,
      41,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 1n,
  "params": {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": {
      "data": [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": {
    "data": [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        29,
        193,
        59,
        131,
        128,
        187,
        225,
        129,
        99,
        86,
        4,
        145,
        211,
        210,
        187,
        147,
        21,
        66,
        82,
        6,
        116,
        15,
        142,
        116,
        113,
        67,
        11,
        227,
        249,
        231,
        130,
        182,
        121,
        129,
        24,
        107,
        217,
        131,
        136,
        86,
        16,
        223,
        134,
        185,
        197,
        192,
        101,
        86,
        235,
        142,
        131,
        214,
        220,
        201,
        4,
        181,
        36,
        127,
        163,
        125,
        222,
        203,
        63,
        9,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `
{
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": {
    "mandatoryKeys": [
      {
        "data": [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": [
      {
        "data": [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": [
      {
        "data": [
          81,
          119,
          101,
          155,
          247,
          49,
          173,
          100,
          138,
          240,
          4,
          160,
          111,
          41,
          241,
          90,
          31,
          98,
          12,
          21,
          134,
          176,
          246,
          255,
          187,
          243,
          231,
          167,
          49,
          54,
          60,
          182,
          19,
          46,
          51,
          56,
          20,
          158,
          115,
          92,
          229,
          38,
          88,
          105,
          215,
          198,
          122,
          80,
          170,
          58,
          218,
          240,
          51,
          237,
          185,
          210,
          244,
          232,
          54,
          135,
          179,
          94,
          224,
          0,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          92,
          134,
          130,
          117,
          86,
          105,
          108,
          178,
          48,
          80,
          216,
          78,
          54,
          118,
          117,
          154,
          210,
          83,
          195,
          142,
          168,
          246,
          186,
          234,
          97,
          189,
          34,
          121,
          104,
          93,
          154,
          31,
          206,
          140,
          141,
          124,
          85,
          76,
          234,
          126,
          41,
          106,
          73,
          162,
          28,
          86,
          177,
          9,
          252,
          251,
          185,
          188,
          119,
          58,
          112,
          29,
          71,
          105,
          191,
          193,
          224,
          180,
          180,
          14,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          196,
          109,
          66,
          100,
          21,
          114,
          58,
          83,
          60,
          157,
          13,
          56,
          207,
          117,
          172,
          35,
          135,
          22,
          218,
          68,
          164,
          111,
          167,
          181,
          70,
          175,
          126,
          144,
          182,
          67,
          224,
          57,
          13,
          198,
          169,
          190,
          205,
          169,
          192,
          29,
          193,
          101,
          27,
          40,
          11,
          240,
          95,
          253,
          9,
          28,
          146,
          54,
          1,
          131,
          102,
          51,
          169,
          139,
          77,
          38,
          93,
          13,
          231,
          10,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          163,
          27,
          233,
          168,
          187,
          183,
          5,
          18,
          38,
          146,
          102,
          224,
          201,
          143,
          57,
          59,
          202,
          0,
          10,
          244,
          196,
          234,
          96,
          102,
          69,
          39,
          199,
          13,
          65,
          131,
          117,
          96,
          57,
          236,
          69,
          171,
          195,
          189,
          135,
          14,
          15,
          28,
          54,
          32,
          139,
          105,
          148,
          158,
          156,
          233,
          216,
          120,
          242,
          130,
          163,
          94,
          152,
          250,
          240,
          150,
          116,
          101,
          135,
          2,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": {
    "data": [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        3,
        48,
        87,
        54,
        84,
        189,
        109,
        86,
        215,
        155,
        210,
        125,
        102,
        245,
        1,
        219,
        34,
        103,
        20,
        78,
        74,
        85,
        173,
        141,
        120,
        22,
        82,
        157,
        53,
        37,
        94,
        224,
        219,
        36,
        199,
        234,
        87,
        203,
        228,
        137,
        138,
        91,
        99,
        138,
        69,
        224,
        53,
        81,
        51,
        196,
        83,
        149,
        193,
        175,
        116,
        5,
        49,
        118,
        75,
        185,
        133,
        109,
        91,
        15,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `
{
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": {
    "mandatoryKeys": [
      {
        "data": [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": [],
    "signatures": [
      {
        "data": [
          211,
          0,
          42,
          164,
          230,
          168,
          234,
          241,
          125,
          162,
          111,
          99,
          164,
          28,
          125,
          245,
          46,
          86,
          137,
          185,
          152,
          221,
          107,
          237,
          253,
          6,
          206,
          240,
          193,
          224,
          171,
          104,
          214,
          185,
          157,
          127,
          155,
          10,
          245,
          216,
          223,
          170,
          118,
          160,
          79,
          214,
          60,
          140,
          243,
          155,
          224,
          188,
          132,
          231,
          249,
          115,
          207,
          235,
          55,
          31,
          1,
          237,
          79,
          6,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          245,
          4,
          251,
          109,
          32,
          199,
          88,
          31,
          44,
          217,
          128,
          244,
          133,
          253,
          123,
          233,
          176,
          219,
          8,
          128,
          108,
          88,
          160,
          12,
          84,
          48,
          5,
          221,
          21,
          235,
          86,
          224,
          188,
          9,
          103,
          64,
          160,
          112,
          92,
          128,
          43,
          161,
          190,
          233,
          183,
          11,
          136,
          218,
          236,
          105,
          110,
          52,
          3,
          24,
          241,
          70,
          124,
          178,
          46,
          117,
          83,
          200,
          168,
          11,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": {
    "data": [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        245,
        17,
        207,
        104,
        129,
        91,
        230,
        13,
        61,
        55,
        20,
        221,
        116,
        16,
        172,
        58,
        51,
        18,
        88,
        66,
        148,
        148,
        35,
        18,
        17,
        74,
        235,
        129,
        168,
        159,
        233,
        174,
        48,
        151,
        165,
        241,
        59,
        166,
        234,
        186,
        204,
        174,
        227,
        225,
        80,
        101,
        165,
        100,
        164,
        65,
        195,
        225,
        185,
        205,
        85,
        73,
        190,
        23,
        226,
        208,
        174,
        178,
        160,
        2,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `
{
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": {
    "mandatoryKeys": [],
    "numberOfSignatures": 1,
    "optionalKeys": [
      {
        "data": [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": [
      {
        "data": [
          88,
          183,
          45,
          148,
          146,
          5,
          43,
          118,
          32,
          243,
          251,
          195,
          59,
          106,
          175,
          210,
          4,
          123,
          105,
          138,
          252,
          70,
          138,
          154,
          239,
          151,
          18,
          57,
          109,
          195,
          147,
          17,
          118,
          243,
          246,
          183,
          210,
          28,
          113,
          212,
          114,
          23,
          30,
          135,
          188,
          51,
          248,
          240,
          14,
          189,
          159,
          143,
          64,
          231,
          246,
          175,
          248,
          140,
          255,
          204,
          228,
          34,
          134,
          1,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          250,
          91,
          158,
          135,
          57,
          191,
          193,
          90,
          128,
          53,
          108,
          99,
          94,
          127,
          198,
          252,
          93,
          187,
          48,
          109,
          176,
          237,
          133,
          234,
          184,
          28,
          2,
          194,
          240,
          52,
          162,
          69,
          174,
          113,
          179,
          244,
          154,
          94,
          171,
          166,
          111,
          213,
          42,
          18,
          157,
          240,
          66,
          143,
          35,
          230,
          207,
          28,
          226,
          71,
          46,
          90,
          25,
          95,
          150,
          167,
          50,
          92,
          29,
          11,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": {
    "data": [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        27,
        195,
        36,
        63,
        60,
        231,
        6,
        34,
        64,
        101,
        31,
        235,
        120,
        142,
        165,
        176,
        6,
        31,
        71,
        61,
        62,
        84,
        197,
        90,
        27,
        114,
        22,
        254,
        185,
        25,
        106,
        119,
        182,
        162,
        72,
        134,
        228,
        150,
        85,
        196,
        249,
        4,
        72,
        109,
        87,
        136,
        192,
        87,
        138,
        232,
        165,
        67,
        123,
        210,
        186,
        76,
        93,
        199,
        245,
        191,
        221,
        116,
        145,
        5,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `
{
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": {
    "mandatoryKeys": [
      {
        "data": [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          255,
          48,
          239,
          64,
          183,
          222,
          66,
          17,
          65,
          55,
          190,
          70,
          241,
          0,
          157,
          48,
          229,
          193,
          152,
          9,
          167,
          61,
          90,
          22,
          43,
          201,
          159,
          126,
          118,
          129,
          214,
          61,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": [],
    "signatures": [
      {
        "data": [
          104,
          108,
          90,
          60,
          201,
          25,
          2,
          104,
          132,
          147,
          146,
          90,
          47,
          233,
          223,
          142,
          58,
          164,
          208,
          226,
          175,
          159,
          236,
          35,
          14,
          103,
          95,
          57,
          133,
          173,
          195,
          85,
          201,
          82,
          72,
          226,
          100,
          188,
          217,
          186,
          157,
          76,
          99,
          96,
          235,
          128,
          18,
          130,
          160,
          162,
          46,
          3,
          60,
          121,
          228,
          5,
          121,
          47,
          34,
          221,
          166,
          204,
          116,
          3,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          12,
          16,
          202,
          194,
          128,
          237,
          48,
          186,
          171,
          26,
          42,
          87,
          254,
          247,
          253,
          45,
          166,
          187,
          68,
          79,
          116,
          175,
          128,
          211,
          176,
          135,
          250,
          231,
          121,
          186,
          176,
          252,
          75,
          187,
          58,
          203,
          171,
          61,
          208,
          24,
          35,
          72,
          123,
          213,
          3,
          171,
          100,
          138,
          189,
          29,
          79,
          61,
          72,
          211,
          135,
          107,
          127,
          89,
          48,
          195,
          116,
          194,
          137,
          4,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": {
    "data": [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        140,
        158,
        221,
        31,
        177,
        169,
        175,
        29,
        151,
        101,
        57,
        170,
        73,
        101,
        9,
        121,
        150,
        124,
        157,
        229,
        62,
        208,
        77,
        37,
        229,
        38,
        111,
        66,
        9,
        200,
        21,
        57,
        148,
        227,
        210,
        197,
        150,
        211,
        173,
        5,
        19,
        66,
        35,
        176,
        54,
        241,
        133,
        194,
        158,
        57,
        24,
        94,
        126,
        36,
        209,
        95,
        206,
        156,
        206,
        5,
        129,
        235,
        113,
        2,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `
{
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": {
    "mandatoryKeys": [
      {
        "data": [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": [
      {
        "data": [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": [
      {
        "data": [
          128,
          186,
          47,
          56,
          121,
          13,
          157,
          96,
          133,
          207,
          73,
          192,
          142,
          147,
          212,
          116,
          185,
          25,
          202,
          23,
          128,
          1,
          51,
          46,
          179,
          141,
          75,
          178,
          247,
          210,
          49,
          48,
          104,
          96,
          62,
          87,
          38,
          44,
          239,
          145,
          222,
          234,
          231,
          194,
          95,
          66,
          116,
          207,
          136,
          67,
          167,
          88,
          32,
          213,
          119,
          87,
          6,
          242,
          166,
          75,
          145,
          133,
          97,
          1,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          50,
          12,
          45,
          225,
          24,
          213,
          122,
          39,
          117,
          218,
          132,
          219,
          209,
          54,
          92,
          98,
          195,
          177,
          205,
          22,
          62,
          104,
          79,
          3,
          86,
          146,
          21,
          62,
          68,
          137,
          94,
          223,
          114,
          237,
          59,
          181,
          62,
          54,
          15,
          159,
          7,
          164,
          97,
          119,
          57,
          218,
          62,
          37,
          97,
          188,
          159,
          36,
          112,
          194,
          50,
          235,
          143,
          26,
          182,
          48,
          154,
          1,
          182,
          14,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          20,
          109,
          193,
          167,
          211,
          50,
          195,
          173,
          183,
          246,
          197,
          209,
          188,
          72,
          52,
          159,
          210,
          10,
          14,
          204,
          138,
          123,
          129,
          21,
          96,
          17,
          193,
          46,
          11,
          177,
          158,
          81,
          18,
          164,
          28,
          251,
          27,
          101,
          184,
          120,
          170,
          134,
          37,
          35,
          53,
          104,
          148,
          114,
          231,
          113,
          182,
          173,
          231,
          193,
          161,
          97,
          247,
          82,
          105,
          92,
          6,
          232,
          137,
          2,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          111,
          105,
          105,
          148,
          206,
          155,
          152,
          152,
          78,
          183,
          19,
          252,
          10,
          71,
          2,
          219,
          248,
          122,
          25,
          155,
          114,
          250,
          198,
          179,
          125,
          193,
          203,
          59,
          48,
          95,
          192,
          104,
          249,
          28,
          125,
          197,
          64,
          173,
          250,
          150,
          18,
          164,
          152,
          243,
          130,
          232,
          88,
          176,
          65,
          240,
          233,
          50,
          139,
          191,
          41,
          47,
          139,
          9,
          98,
          6,
          232,
          224,
          228,
          10,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          22,
          192,
          250,
          120,
          243,
          221,
          132,
          40,
          144,
          92,
          123,
          111,
          22,
          6,
          3,
          29,
          204,
          139,
          135,
          217,
          213,
          76,
          33,
          146,
          110,
          136,
          33,
          99,
          143,
          74,
          27,
          210,
          94,
          78,
          253,
          190,
          119,
          84,
          253,
          141,
          147,
          39,
          70,
          99,
          129,
          65,
          127,
          166,
          173,
          237,
          139,
          129,
          56,
          178,
          200,
          88,
          209,
          174,
          155,
          16,
          0,
          139,
          195,
          13,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": {
    "data": [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        173,
        248,
        243,
        160,
        78,
        104,
        240,
        137,
        230,
        134,
        87,
        43,
        96,
        152,
        101,
        53,
        55,
        51,
        87,
        42,
        255,
        19,
        215,
        136,
        5,
        33,
        97,
        107,
        32,
        139,
        125,
        178,
        157,
        253,
        111,
        109,
        43,
        12,
        207,
        188,
        254,
        52,
        134,
        146,
        119,
        40,
        138,
        39,
        83,
        254,
        245,
        15,
        165,
        44,
        211,
        162,
        51,
        227,
        146,
        101,
        120,
        244,
        152,
        5,
      ],
      "type": "Buffer",
    },
  ],
}
`;
